--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     </header>
     <main>
         <div>
-            <form action="script/app.js" method="post">
-            <label for="pullups">P</label>
-            <input type="number" id="pullups" value="10">
-            <input type="submit">
-        </form>
+            <button id="reset">Reset</button>
+            <button>+10</button>
+            <button>+5</button>
+            <button>+1</button>
+            <button>-10</button>
+            <button>-5</button>
+            <button>-1</button>
         </div>
-        <div>
-
-        </div>
+        
     </main>
     <script src="script/app.js"></script>
 </body>
